[tool.poetry]
name = "pythereum"
version = "1.1.9"
description = "A lightweight Ethereum JSON RPC library written in python"
authors = ["gabedonnan <47415809+gabedonnan@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
websockets = "^12.0"
dataclasses-json = "^0.6.3"
python-dotenv = "^1.0.0"
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
aiohttp = "^3.9.1"
eth-account = "^0.10.0"
eth-utils = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
