[tool.poetry]
name = "pythereum"
version = "1.2.1"
description = "A super fast Ethereum JSON RPC library written in python"
authors = ["gabedonnan <47415809+gabedonnan@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
websockets = "^12.0"
dataclasses-json = "^0.6.4"
python-dotenv = "^1.0.1"
pytest = "^7.4.4"
pytest-asyncio = "^0.23.4"
aiohttp = "^3.9.3"
eth-account = "^0.10.0"
eth-utils = "^3.0.0"
pycryptodome = "^3.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
