[tool.poetry]
name = "pythereum"
version = "1.2.0"
description = "A super fast Ethereum JSON RPC library written in python"
authors = ["gabedonnan <47415809+gabedonnan@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
websockets = "^15.0.1"
dataclasses-json = "^0.6.7"
python-dotenv = "^1.1.0"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
aiohttp = "^3.11.18"
eth-account = "^0.13.7"
eth-utils = "^5.3.0"
setuptools = "^80.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
